# Elexonpy

./: .all-contributorsrc  .bumpversion.cfg  API-metadata-2024-07-08T13_43_58.898Z.json  README.md  SECURITY.md  openapi.json  openapi_old.json  pyproject.toml  setup.py
data/: prod-insol-insights-api.json
docs/: AvailabilityApi.md  BalancingMechanismDynamicApi.md  BalancingMechanismPhysicalApi.md  BalancingServicesAdjustmentDisaggregatedApi.md  BalancingServicesAdjustmentNetApi.md  BidOfferAcceptancesApi.md  BidOfferApi.md  CreditDefaultNoticeApi.md  DatasetsApi.md  DemandApi.md  DemandForecastApi.md  DocApiEndpointsList.md  DocModelsList.md  GenerationApi.md  GenerationForecastApi.md  HealthCheckApi.md  IndicatedForecastApi.md  IndicativeImbalanceSettlementApi.md  InsightsApiLegacyInteroperabilityLegacyRemitDetailBody.md  InsightsApiLegacyInteroperabilityLegacyRemitDetailItem.md  InsightsApiLegacyInteroperabilityLegacyRemitDetailList.md  InsightsApiLegacyInteroperabilityLegacyRemitDetailMetadata.md  InsightsApiLegacyInteroperabilityLegacyRemitDetailResponse.md  InsightsApiLegacyInteroperabilityLegacyRemitListItem.md  InsightsApiLegacyInteroperabilityLegacyRemitListMetadata.md  InsightsApiLegacyInteroperabilityLegacyRemitListResponse.md  InsightsApiLegacyInteroperabilityLegacyRemitListResponseBody.md  InsightsApiLegacyInteroperabilityLegacyRemitOutageProfile.md  InsightsApiLegacyInteroperabilityLegacyRemitOutageProfileSegment.md  InsightsApiLegacyInteroperabilityLegacyRemitResponseList.md  InsightsApiModelsMetadataApiResponseSourceMetadata.md  InsightsApiModelsResponsesBalancingBalancingServicesVolume.md  InsightsApiModelsResponsesBalancingBidOfferAcceptancesResponse.md  InsightsApiModelsResponsesBalancingBidOfferResponse.md  InsightsApiModelsResponsesBalancingCreditDefaultNoticeResponse.md  InsightsApiModelsResponsesBalancingDatasetRowsBalancingServicesVolumeData.md  InsightsApiModelsResponsesBalancingDatasetRowsBidOfferAcceptanceLevelDatasetResponse.md  InsightsApiModelsResponsesBalancingDatasetRowsBidOfferDatasetResponse.md  InsightsApiModelsResponsesBalancingDatasetRowsCreditDefaultNoticeDatasetResponse.md  InsightsApiModelsResponsesBalancingDatasetRowsDisaggregatedBalancingServicesAdjustmentData.md  (+268 more)
elexonpy/: __init__.py  __init__.py.bak  api_client.py  api_client.py.bak  configuration.py  rest.py
examples/: demand.py  system-price.py  system_price.py  wind_solar_forecast.py
pyelexon/: CDN.py  constants.py  datasets.py  health.py  soso.py  temperature.py
scripts/: api_data_retrieval  api_data_retrieval.py  get_all_routes.py  json_to_dataframe_with_metadata  json_to_dataframe_with_metadata.py  make_files.py
spec/: openapi.json  openapi_old.json
swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
test/: Testing generate function from openapi.ipynb  test_availability_api.py  test_balancing_mechanism_dynamic_api.py  test_bid_offer_api.py  (+463 more)
(+616 files in other folders)
