[project]
name="pyelexon"
description = "pyelexon"
authors = [{name="Peter Dudfield", email="info@openclimatefix.org"}]
dynamic = ["version", "readme"]
license={file="LICENCE"}

dependencies = [
    "pandas",
    "requests<2.32.0",
    "requests-mock"
]

[tool.setuptools.dynamic]
#version = {attr = "pyelexon.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.package-dir]
"pyelexon" = "pyelexon"

[project.optional-dependencies]
dev=[
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock"
]

all=["pyelexon[dev]"]

[tool.mypy]
exclude = [
    "^tests/",
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
exclude = ["tests","data","scripts"]
