[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elexonpy"
version = "1.0.14"
description = "Elexon Python Client"
authors = [
    { name = "Richa Sharma", email = "onlinericha19@gmail.com" },
    { name = "Peter Dudfield", email = "info@openclimatefix.org" }
]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["Swagger", "Elexon API", "Python Client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "urllib3>=1.15",
    "six>=1.10",
    "certifi",
    "python-dateutil",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests",  
    "requests-mock"
]

[project.urls]
Homepage = "https://github.com/openclimatefix/Elexonpy"
"Source Code" = "https://github.com/openclimatefix/Elexonpy"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock"
]

all = ["elexonpy[dev]"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.package-dir]
"elexonpy" = "elexonpy"

[tool.mypy]
exclude = [
    "^tests/",
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
exclude = ["tests","data","scripts"]
